Ajout du profil

--- a/Runbelievable/www/index.html
+++ b/Runbelievable/www/index.html
@@ -53,6 +53,7 @@
         <script type="text/javascript" src="controller/SessionController.js"></script>
         <script type="text/javascript" src="controller/StatistiquesSessionController.js"></script>
         <script type="text/javascript" src="controller/ListeSessionsController.js"></script>
+        <script type="text/javascript" src="controller/ProfilController.js"></script>
 
         <title>Runbelievable</title>
     </head>
@@ -82,9 +83,9 @@
 
                         </div>
                     </section>
-                    <div class="title">Profile</div>
+                    <div class="title">Profil</div>
                     <div class="liens">
-                        <a href="#profile" ng-show="true"><i class="fa fa-user"></i> Voir le profil</a>
+                        <a href="#profil" ng-show="true"><i class="fa fa-user"></i> Voir le profil</a>
                         <a href="#ajusterDonnees" ng-show="true"><i class="fa fa-signal"></i> Ajuster les données</a>
                         <a href="#ajusterDonnees" ng-show="true"><i class="fa fa-bar-chart-o"></i> Statistiques</a>
                     </div>
